# operating-systems

./: .gitignore  CMakeLists.txt  Makefile  README.md  demo.c  documentationOSMP.odt
OSMPFork/: Echoall  Echoall.c  OSMPFork.c
OSMPRun/: OSMPBcast.c  OSMPExecutable.c  OSMPNonBlocking.c  OSMPRun.c  OSMPSendRecv.c  osmprun.h
experimente/Aufgabe2/: aufgabe2.c
experimente/Aufgabe3/: aufgabe3.c
experimente/exec/: execl_exp.c
experimente/lok_glob_mem/: lokglobmem.c
experimente/simplesFork/: fork.c
experimente/zweimalfork/: fork_in_schleife.c  zweifork.c
lib/: OSMP.h  OSMPlib.c  OSMPlib.h  datastructs.h
